# roblox-websocket-proxy

./: Cargo.toml  README.md
luau/: webSocket.luau
src/: api_error.rs  api_response.rs  app_state.rs  authentication.rs  config.rs  main.rs
src/endpoints/: close_socket.rs  connect_socket.rs  get_socket.rs  mod.rs  send_socket.rs
