[package]
name = "roblox-websocket-proxy"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde_json = "1.0"

[dependencies.uuid]
version = "1.8.0"
features = ["serde", "v4"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio-tungstenite]
version = "0.21.0"
features = ["native-tls"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.futures-util]
version = "0.3.28"
default-features = false
features = ["sink", "std"]
